test [vfs]: adjust case-sensitivity test for Win
+ since some (unknown) version Windows prohibits changing case-sesnsitivity on non-empty directories -- that makes few tests meaningless

GitOrigin-RevId: 9a3c913797f4bba4df062d86ff7e214bf6137d80